// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils/generateSeed should return data for array with items 1`] = `
Object {
  "tag": Array [
    "Accountability",
  ],
}
`;

exports[`utils/generateSeed should return data for company name 1`] = `
Object {
  "name": "Gleichner, Hilll and Turner",
}
`;

exports[`utils/generateSeed should return data for object with items 1`] = `
Object {
  "address": Object {
    "city": "East Gabrielle",
    "state": "Oklahoma",
    "streetAddress": "34543 Hills Coves",
  },
  "countryCode": "SN",
}
`;

exports[`utils/generateSeed should return seed data for fake book 1`] = `
Object {
  "authorId": 12495,
  "dateStr": "2000-11-19T03:31:46.870Z",
  "price": "91.00",
  "title": "Oman",
}
`;

exports[`utils/generateSeed should return seed data for fake user 1`] = `
Object {
  "avatar": "https://s3.amazonaws.com/uifaces/faces/twitter/d_nny_m_cher/128.jpg",
  "email": "Monroe_Lowe45@yahoo.com",
  "lastSignInAt": 1999-02-14T00:42:37.074Z,
  "locale": "nb_NO",
  "loggedInCount": 86856,
  "name": "佐藤 蓮",
  "userName": "Ona.Kuhic",
}
`;

exports[`utils/generateSeed should return seed data for fake user with today(1970/1/1) 1`] = `
Object {
  "avatar": "https://s3.amazonaws.com/uifaces/faces/twitter/ramanathan_pdy/128.jpg",
  "email": "Lavada65@hotmail.com",
  "lastSignInAt": 1969-04-02T20:36:42.110Z,
  "locale": "fr_CA",
  "loggedInCount": 55005,
  "name": "Mrs. Ona Kuhic",
  "userName": "Alejandrin_Stroman",
}
`;

exports[`utils/generateSeed should return seed data for fake user without locale 1`] = `
Object {
  "avatar": "https://s3.amazonaws.com/uifaces/faces/twitter/ramanathan_pdy/128.jpg",
  "email": "Lavada65@hotmail.com",
  "lastSignInAt": 1999-04-03T06:36:42.110Z,
  "locale": "fr_CA",
  "loggedInCount": 55005,
  "name": "Mrs. Ona Kuhic",
  "userName": "Alejandrin_Stroman",
}
`;

exports[`utils/generateSeeds should return seed data for fake 3 user 1`] = `
Array [
  Object {
    "avatar": "https://s3.amazonaws.com/uifaces/faces/twitter/d_nny_m_cher/128.jpg",
    "email": "Monroe_Lowe45@yahoo.com",
    "lastSignInAt": 1999-02-14T00:42:37.074Z,
    "locale": "nb_NO",
    "loggedInCount": 86856,
    "name": "佐藤 蓮",
    "userName": "Ona.Kuhic",
  },
  Object {
    "avatar": "https://s3.amazonaws.com/uifaces/faces/twitter/millinet/128.jpg",
    "email": "Lyla.Ritchie@yahoo.com",
    "lastSignInAt": 1999-11-28T06:30:57.477Z,
    "locale": "es_MX",
    "loggedInCount": 68464,
    "name": "高橋 太一",
    "userName": "Kassandra_Zulauf12",
  },
  Object {
    "avatar": "https://s3.amazonaws.com/uifaces/faces/twitter/tjrus/128.jpg",
    "email": "Gage.Flatley48@hotmail.com",
    "lastSignInAt": 1999-10-31T23:39:14.356Z,
    "locale": "ja",
    "loggedInCount": 76818,
    "name": "佐々木 陸斗",
    "userName": "Kaelyn_Wyman",
  },
]
`;
